# fastMD

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_report_npt_nh.json  benchmark_report_nvt_nh.json  fastmd_benchmark.conf  fastmd_profile.conf  fastmd_profile_1k.conf
benchmarks/: benchmark.json  generate_lammps_input.py  minimize.in  report.py  run.py
data/CG_water_md/: fastmd_nvt.conf  fastmd_static.conf  pair_table.txt  system.data  validate_rdf.ipynb
docs/superpowers/plans/: 2026-04-25-fastMD-lammps-benchmark.md  2026-04-26-fastmd-repo-organization-plan.md  2026-04-26-virial-and-force-optimization.md  2026-04-27-profile-guided-optimization.md  2026-05-11-tabulated-potential.md  2026-05-12-cg-water-rdf-validation.md  2026-05-13-table-kernel-optimization.md
docs/superpowers/specs/: 2026-04-25-fastMD-lammps-benchmark-design.md  2026-04-26-fastmd-repo-organization-design.md  2026-04-26-virial-and-force-optimization-design.md  2026-04-27-profile-guided-optimization-design.md  2026-05-11-cg-water-table-validation-design.md  2026-05-11-tabulated-potential-design.md  2026-05-12-cg-water-rdf-validation-design.md  2026-05-13-table-kernel-optimization-design.md
reference/: cpu_reference.hpp
src/: main.cu
src/analysis/: correlator.cu  correlator.cuh  rg.cu  rg.cuh  thermo.cu  thermo.cuh
src/core/: morton.cu  morton.cuh  pbc.cuh  system.cu  system.cuh  types.cuh
src/force/: angle.cu  angle.cuh  fene.cu  fene.cuh  lj.cu  lj.cuh  table.cu  table.cuh
src/integrate/: langevin.cu  langevin.cuh  nose_hoover.cu  nose_hoover.cuh
src/io/: config.cpp  config.hpp  dump.cu  dump.cuh  lammps_data.cpp  lammps_data.hpp  table_parser.cpp  table_parser.hpp
src/neighbor/: skin_trigger.cuh  tile_list.cu  tile_list.cuh  verlet_list.cu  verlet_list.cuh
tests/: CMakeLists.txt  test_angle.cu  test_config.cu  test_correlator.cu  test_fene.cu  test_integrator.cu  test_lammps_data.cu  test_lj.cu  test_mass.cu  test_morton.cu  test_nose_hoover.cu  test_pbc.cu  test_rg.cu  test_table.cu  test_table_parser.cu  test_thermo.cu  test_tile_list.cu  test_utils.cuh
tests/fixtures/: lj_64.conf  lj_64.xyz  mini.data
tests/integration/bonded_ring/: fastmd_template.conf  run_tests.sh  test_energy_drift.py  test_forces.py  test_thermo.py  utils.py
tests/integration/nose_hoover/: fastmd_template.conf  run_tests.sh  test_npt_thermo.py  utils.py
tools/: compare_thermo.py  convert_lammps_units.py  run_validation.sh  static_force_check.py
